# matmul_benchmark

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_matmul.cpp
includes/: matmul.hpp  matmul_tiling.hpp  matrix.hpp
src/: main.cpp
tests/: test_matmul.cpp
